# PDAJ-2020

PDAJ_Project/: display_results.py  pyproject.toml
PDAJ_Project/PDAJ_Project/: db.sqlite3  manage.py
PDAJ_Project/PDAJ_Project/PDAJ_Project/: asgi.py  settings.py  urls.py  wsgi.py
PDAJ_Project/PDAJ_Project/special_fields/: apps.py  urls.py  views.py
PDAJ_Project/PDAJ_Project/special_fields/solutions/: comperhension.py  generators.py  par.py  seq.py
api/: dictionary_hex_prime_numbers.py  numbers.py  prime_numbers.py
v2/: dictionary_hex_prime_numbers.py  generators.py  imap.py  list_comperhension_hex_dictionary.py  map.py
webapi/: pyproject.toml
webapi/djangoPDAJ/: db.sqlite3  manage.py
webapi/djangoPDAJ/djangoPDAJ/: asgi.py  settings.py  urls.py  wsgi.py
webapi/djangoPDAJ/student/: admin.py  models.py  serializers.py  urls.py  views.py
webapi/djangoPDAJ/student/migrations/: 0001_initial.py
