[tool.poetry]
name = "pdaj"
version = "0.1.0"
description = ""
authors = ["Nikolina Tomic"]

[tool.poetry.dependencies]
python = "^3.6"
Django = "3.1.3"
django-rest-framework = "^0.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
